[FIX] Front deployment [MOD] Mobile deploy enhancement, still not ok

--- a/area-expo/Dockerfile
+++ b/area-expo/Dockerfile
@@ -5,7 +5,14 @@ COPY package.json .
 COPY package-lock.json .
 COPY . .
 
-RUN npm install
-RUN npm install -g expo-cli
-RUN expo build:android
-CMD ["cp", "*.apk", "/shared"]
+#RUN npm install
+#RUN npm install -g expo-cli
+#RUN expo build:android
+#CMD ["cp", "*.apk", "/shared"]
+
+### Placeholder while building don't work:
+RUN touch client.apk
+RUN echo "Hello :) I know, this is disapointing..." > client.apk
+RUN cp *.apk /shared
+
+CMD ["echo", "I am not know how to build :("]
