[MOD] Improved expo build, still not works.

--- a/area-expo/Dockerfile
+++ b/area-expo/Dockerfile
@@ -1,13 +1,19 @@
-FROM node:latest
-
+FROM node:latest AS build-node
 WORKDIR /app
-COPY package.json .
-COPY package-lock.json .
+COPY package*.json ./
 COPY . .
 
 RUN npm install
-#RUN npm install -g expo-cli
+RUN yarn add expo
 RUN npx expo prebuild --platform android
-RUN ./android/gradlew assembleRelease
+
+FROM openjdk:8-jdk-alpine AS build-java
+
+COPY --from=build-node /app /app
+WORKDIR /app
+
+RUN apk add --update nodejs npm
+
+RUN cd ./android/ && ./gradlew assembleRelease && cd ..
 RUN ls -la android/app/build/outputs/bundle/release/
 CMD ["cp", "android/app/build/outputs/bundle/release/*.apk", "/pipe"]
