--- a/area-node/package.json
+++ b/area-node/package.json
@@ -10,8 +10,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.3.1",
         "fastify": "^4.25.1",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3"
     }
 }
