--- a/area-node/package.json
+++ b/area-node/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@fastify/cors": "^8.0.0",
         "bcrypt": "^5.1.1",
         "dotenv": "^16.3.1",
         "fastify": "^4.25.1",
