--- a/area-node/package.json
+++ b/area-node/package.json
@@ -10,10 +10,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.2",
         "bcrypt": "^5.1.1",
         "dotenv": "^16.3.1",
         "fastify": "^4.25.1",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.0.3"
+        "mongoose": "^8.0.3",
+        "query-string": "^8.1.0"
     }
 }
