[ADD] flow creation and init triggers and actions

--- a/area-node/package.json
+++ b/area-node/package.json
@@ -17,6 +17,7 @@
         "fastify": "^4.25.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
+        "octonode": "^0.10.2",
         "query-string": "^8.1.0"
     }
 }
