--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 name: ci
 
-on:
-  push:
-    branches:
-      - main
+on: [push, pull_request]
 
 env:
   MIRROR_URL: git@github.com:EpitechPromo2026/B-DEV-500-TLS-5-2-area-saad.berrada.git
@@ -22,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          
+
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url: ${{ env.MIRROR_URL }}
