[MOD] | coderabbite enabled on this branch

--- a/.github/workflows/coderabit.yml
+++ b/.github/workflows/coderabit.yml
@@ -10,7 +10,7 @@ on:
   pull_request_review_comment:
     types: [created]
   push:
-    branches: [main, dev]
+    branches: [main, dev, CI_dockercompose]
 
 concurrency:
   group:
