--- a/area-node/package.json
+++ b/area-node/package.json
@@ -15,6 +15,7 @@
         "bcrypt": "^5.1.1",
         "dotenv": "^16.3.1",
         "fastify": "^4.25.1",
+        "fastify-cron": "^1.3.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
         "octonode": "^0.10.2",
