--- a/area-expo/package.json
+++ b/area-expo/package.json
@@ -1,11 +1,10 @@
 {
   "name": "area-expo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,10 +16,13 @@
     "expo": "~49.0.15",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-safe-area-context": "^4.8.1",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "expo-splash-screen": "~0.14.1",
+    "react-dom": "17.0.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
