--- a/area-expo/package.json
+++ b/area-expo/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "AsyncStorage": "^0.1.5",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
@@ -19,6 +20,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0"
   },
