--- a/area-expo/Dockerfile
+++ b/area-expo/Dockerfile
@@ -1,6 +1,10 @@
 FROM debian:bullseye-slim
 
-RUN apt-get update && apt-get install -y curl && curl -fsSL https://deb.nodesource.com/setup_16.x | bash - && apt-get install -y nodejs && apt-get clean
+RUN apt-get update && \
+    apt-get install -y curl && \
+    curl -fsSL https://deb.nodesource.com/setup_16.x | bash - && \
+    apt-get install -y nodejs && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN npm install -g yarn
 
