[MOD] Cleaned old non-working version, looking to fix area-node

--- a/area-react/Dockerfile
+++ b/area-react/Dockerfile
@@ -2,11 +2,13 @@ FROM node:latest as build
 
 WORKDIR /app
 COPY package.json .
+
 RUN npm install
 COPY . .
-RUN npm run build
-RUN npm install -g serve
+#RUN npm run build
+#RUN npm install -g serve
 
 EXPOSE 8081
 
-CMD ["serve", "-s", "build", "-l", "8081"]
+#CMD ["serve", "-s", "build", "-l", "8081"]
+CMD ["npm", "start"]
