[FIX] Repairing errors

--- a/area-react/Dockerfile
+++ b/area-react/Dockerfile
@@ -5,10 +5,9 @@ COPY package.json .
 
 RUN npm install
 COPY . .
-#RUN npm run build
-#RUN npm install -g serve
+RUN npm run build
+RUN npm install -g serve
 
 EXPOSE 8081
 
-#CMD ["serve", "-s", "build", "-l", "8081"]
-CMD ["npm", "start"]
+CMD ["serve", "-s", "build", "-l", "8081"]
