--- a/area-node/Dockerfile
+++ b/area-node/Dockerfile
@@ -5,9 +5,10 @@ COPY package.json .
 
 RUN npm install
 COPY . .
-RUN npm run build
-RUN npm install -g serve
+#RUN npm run build
+#RUN npm install -g serve
 
 EXPOSE 3000
 
-CMD ["serve", "-s", "build", "-l", "3000"]
+#CMD ["serve", "-s", "build", "-l", "3000"]
+CMD ["npm", "start"]
