--- a/compose.yml
+++ b/compose.yml
@@ -1,13 +1,24 @@
 version: '3'
 services:
+  mongo:
+    container_name: mongo
+    image: mongo
+    volumes:
+      - database:/data/db
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=area-backend
+      - MONGO_INITDB_ROOT_PASSWORD=mypassword
+
   server:
     container_name: server
     build:
       context: area-node/
+    depends_on:
+        - mongo
     ports:
       - "8080:3000"
-    volumes:
-      - database:/data
 
   client_mobile:
     container_name: mobile_client
