--- a/area-node/package.json
+++ b/area-node/package.json
@@ -5,7 +5,7 @@
     "main": "src/app.js",
     "scripts": {
         "start": "node src/app.js",
-        "test": "nodemon src/app.js"
+        "dev": "nodemon src/app.js"
     },
     "author": "",
     "license": "ISC",
