--- a/area-node/package.json
+++ b/area-node/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@fastify/cors": "^8.0.0",
+        "@fastify/static": "^6.12.0",
         "axios": "^1.6.2",
         "bcrypt": "^5.1.1",
         "dotenv": "^16.3.1",
