--- a/area-expo/package.json
+++ b/area-expo/package.json
@@ -9,23 +9,25 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/cli-platform-android": "^13.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "AsyncStorage": "^0.1.5",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-dev-client": "~2.4.12",
     "expo-linear-gradient": "~12.3.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.6.0",
     "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
-    "expo-splash-screen": "~0.14.1",
-    "react-dom": "17.0.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
