--- a/area-node/package.json
+++ b/area-node/package.json
@@ -17,9 +17,11 @@
         "dotenv": "^16.3.1",
         "fastify": "^4.25.1",
         "fastify-cron": "^1.3.1",
+        "google-auth-library": "^9.4.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
         "octonode": "^0.10.2",
+        "passport-google-oidc": "^0.1.0",
         "query-string": "^8.1.0"
     }
 }
