[MOD] Adding and adapting micrpayments

--- a/area-expo/Dockerfile
+++ b/area-expo/Dockerfile
@@ -1,11 +1,12 @@
 FROM node:latest
 
-WORKDIR /app
-COPY package.json .
-COPY package-lock.json .
-COPY . .
-
-RUN npm install
-RUN npm install -g expo-cli
-RUN expo build:android
-CMD ["cp", "*.apk", "/shared"]
+CMD ["echo", "oui"]
+#WORKDIR /app
+#COPY package.json .
+#COPY package-lock.json .
+#COPY . .
+#
+#RUN npm install
+#RUN npm install -g expo-cli
+#RUN expo build:android
+#CMD ["cp", "*.apk", "/shared"]
