--- a/area-node/.env.exemple
+++ b/area-node/.env.exemple
@@ -10,3 +10,10 @@ GITHUB_APP_ID=
 GITHUB_SECRET=
 
 OPEN_WEATHER_API_KEY=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_PROJECT_ID=
+GOOGLE_AUTH_URI=
+GOOGLE_TOKEN_URI=
+GOOGLE_AUTH_PROVIDER_X509_CERT_URL=
+GOOGLE_CLIENT_SECRET=
