--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ env:
 
 jobs:
   push_to_mirror:
-    needs: [docker_compose, docker_update]
+    needs: [docker_compose, docker_updates]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -44,7 +44,7 @@ jobs:
       - name: Stop containers
         run: docker-compose down
   
-  docker_update:
+  docker_updates:
     runs-on: ubuntu-latest
     services:
       docker:
@@ -63,4 +63,4 @@ jobs:
       - name: tag image back
         run: docker tag ${{ secrets.DOCKER_USERNAME }}/area_back:latest ${{ secrets.DOCKER_USERNAME }}/area_back:latest
       - name: push image back
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/area_back:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/area_back:latestError: Cannot perform an interactive login from a non TTY device
