--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           - 8080:80
     steps:
       - name: login to docker mongo
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: tag image mongo
         run: docker tag ${{ secrets.DOCKER_USERNAME }}/area_mongo:latest ${{ secrets.DOCKER_USERNAME }}/area_mongo:latest
       - name: push image mongo
