--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -25,31 +25,29 @@ jobs:
           draft: false
           prerelease: false
   
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      
-      - name: Set node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-          cache: 'yarn'
-        
-      - name: Set expo
-        uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-      
-      - name: Install dependencies
-        run: yarn install
-      
-      - name: Build
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-        run: |
-        eas build --platform android --profile production --no-wait --non-interactive --clear-credentials
-    
-  
+  #build:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v3
+  #    
+  #    - name: Set node.js
+  #      uses: actions/setup-node@v3
+  #      with:
+  #        node-version: 18.x
+  #        cache: 'yarn'
+  #      
+  #    - name: Set expo
+  #      uses: expo/expo-github-action@v8
+  #      with:
+  #        eas-version: latest
+  #        token: ${{ secrets.EXPO_TOKEN }}
+  #    
+  #    - name: Install dependencies
+  #      run: yarn install
+  #    
+  #    - name: Build
+  #      env:
+  #        EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+  #      run: |
+  #      eas build --platform android --profile production --no-wait --non-interactive --clear-credentials
