--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -1,54 +1,58 @@
 name: apk-release
 
-on:
-  push:
+on: push
 
-env:
-  working-directory: ./area-expo
-
-jobs:
-  release:
-    permissions: write-all
+#jobs:
+#  release:
+#    permissions: write-all
+#    runs-on: ubuntu-latest
+#    name: Release
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#      
+#      - name: Create release
+#        id: create_release
+#        uses: actions/create-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          tag_name: ${{ github.ref }}
+#          release_name: Release ${{ github.ref }}
+#          draft: false
+#          prerelease: false
+  
+  build:
     runs-on: ubuntu-latest
-    name: Release
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set node.js
+        uses: actions/setup-node@v3
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-  
-  #build:
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v3
-  #    
-  #    - name: Set node.js
-  #      uses: actions/setup-node@v3
-  #      with:
-  #        node-version: 18.x
-  #        cache: 'yarn'
-  #      
-  #    - name: Set expo
-  #      uses: expo/expo-github-action@v8
-  #      with:
-  #        eas-version: latest
-  #        token: ${{ secrets.EXPO_TOKEN }}
-  #    
-  #    - name: Install dependencies
-  #      run: yarn install
-  #    
-  #    - name: Build
-  #      env:
-  #        EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-  #      run: |
-  #      eas build --platform android --profile production --no-wait --non-interactive --clear-credentials
+          node-version: 18.x
+          cache: 'yarn'
+        
+      - name: Set expo
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - name : Install JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Install Android SDK
+        uses: android-actions/setup-android@v3
+      
+      - name: Build
+        working-directory: ./area-expo
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+        run: |
+        eas build --platform android --profile production --no-wait --non-interactive --clear-credentials
+        mv ./android/app/build/outputs/apk/release/app-release.apk ./area.apk
