--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -51,8 +51,7 @@ jobs:
       
       - name: Build
         working-directory: ./area-expo
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
         run: |
-        eas build --platform android --profile production --no-wait --non-interactive --clear-credentials
-        mv ./android/app/build/outputs/apk/release/app-release.apk ./area.apk
+          eas init --id ${{ secrets.EXPO_LINK_TOKEN }}
+          eas build --platform android --profile production --no-wait --non-interactive --clear-credentials
+          mv ./android/app/build/outputs/apk/release/app-release.apk ./area.apk
