ADD fixed eas.json

--- a/area-expo/eas.json
+++ b/area-expo/eas.json
@@ -5,22 +5,17 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "env": {
-        "development": {
-          "developmentClient": true,
-          "distribution": "internal"
-        },
-        "production": {
-          "developmentClient": false,
-          "distribution": "internal"
+      "distribution": "internal"
+      },
+    "production": {
+        "developmentClient": false,
+        "android": {
+          "buildType": "apk"
         }
       }
     },
-    "preview": {
-      "distribution": "internal"
-    },
-    "production": {}
+  "preview": {
+    "distribution": "internal"
   },
   "submit": {
     "production": {}
