--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -3,27 +3,28 @@ name: apk-release
 on: push
 
 jobs:
-#  release:
-#    permissions: write-all
-#    runs-on: ubuntu-latest
-#    name: Release
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#      
-#      - name: Create release
-#        id: create_release
-#        uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          tag_name: ${{ github.ref }}
-#          release_name: Release ${{ github.ref }}
-#          draft: false
-#          prerelease: false
+  create-release:
+    permissions: write-all
+    runs-on: ubuntu-latest
+    name: Release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
   
   build:
     runs-on: ubuntu-latest
+    needs: create-release
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -48,3 +49,8 @@ jobs:
         run: |
           eas build --platform android --profile production --no-wait --non-interactive --local
           mv build-*.apk area.apk
+      
+      - name: Upload APK to release
+        working-directory: ./area-expo
+        run: |
+          gh release upload ${{ github.ref }} area.apk
