ADD new tag_name and release_name

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -22,8 +22,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: devopstest
+          release_name: Release devopstest
           draft: false
           prerelease: false
   
