--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -57,5 +57,7 @@ jobs:
       
       - name: Upload APK to release
         working-directory: ./area-expo
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh release upload ${{ github.ref }} area.apk
