--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -57,8 +57,7 @@ jobs:
           mv build-*.apk area.apk
       
       - name: Upload APK to release
-        working-directory: ./area-expo
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: area.apk
+          files: ./area-expo/area.apk
