--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -2,8 +2,6 @@ name: apk-release
 
 on: 
   push:
-    branches:
-      - devops
     tags:
       - '*'
 
@@ -19,12 +17,12 @@ jobs:
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
-        if : startsWith(github.ref, 'refs/tags/')
+        if : startsWith(github.ref_name, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: devopstest ${{ github.ref }}
-          release_name: Release devopstest ${{ github.ref }}
+          tag_name: devopstest ${{ github.ref_name }}
+          release_name: Release devopstest ${{ github.ref_name }}
           draft: false
           prerelease: false
   
@@ -58,6 +56,6 @@ jobs:
       
       - name: Upload APK to release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref_name, 'refs/tags/')
         with:
           files: ./area-expo/area.apk
