--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -8,26 +8,40 @@ on:
       - '*'
 
 jobs:
+  #create-release:
+  #  permissions: write-all
+  #  runs-on: ubuntu-latest
+  #  name: Release
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v3
+  #    
+  #    - name: Create release
+  #      id: create_release
+  #      uses: actions/create-release@v1
+  #      env:
+  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #      with:
+  #        tag_name: devopstest ${{ github.ref_name }}
+  #        release_name: Release devopstest ${{ github.ref_name }}
+  #        draft: false
+  #        prerelease: false
+  
   create-release:
-    permissions: write-all
     runs-on: ubuntu-latest
     name: Release
+    env:
+      BRANCH: ${{ devops }}
+      TAG: ${{ github.ref_name }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        if : startsWith(github.ref_name, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: devopstest ${{ github.ref_name }}
-          release_name: Release devopstest ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-  
+      - name: create the release
+      run: |
+        gh release create "$TAG" \
+          --title "v$TAG" \
+          --generate-notes \
+          --target "$BRANCH" \
+          
+
   build:
     runs-on: ubuntu-latest
     needs: create-release
@@ -58,6 +72,5 @@ jobs:
       
       - name: Upload APK to release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref_name, 'refs/tags/')
         with:
           files: ./area-expo/area.apk
