--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -33,6 +33,7 @@ jobs:
     env:
       BRANCH: 'devops'
       TAG: ${{ github.ref_name }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: create the release
         run: |
