--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -8,39 +8,25 @@ on:
       - '*'
 
 jobs:
-  #create-release:
-  #  permissions: write-all
-  #  runs-on: ubuntu-latest
-  #  name: Release
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v3
-  #    
-  #    - name: Create release
-  #      id: create_release
-  #      uses: actions/create-release@v1
-  #      env:
-  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #      with:
-  #        tag_name: devopstest ${{ github.ref_name }}
-  #        release_name: Release devopstest ${{ github.ref_name }}
-  #        draft: false
-  #        prerelease: false
-  
   create-release:
+    permissions: write-all
     runs-on: ubuntu-latest
     name: Release
-    env:
-      BRANCH: 'devops'
-      TAG: ${{ github.ref_name }}
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      REPO: ${{ github.repository }}
     steps:
-      - name: create the release
-        run: |
-          gh release create "$TAG" --title "v$TAG" --generate-notes --target "$BRANCH" --repo "$REPO"
-          
-
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: devops-${{ github.ref_name }}
+          release_name: Release devopstest ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+  
   build:
     runs-on: ubuntu-latest
     needs: create-release
@@ -72,5 +58,6 @@ jobs:
           mv build-*.apk area.apk
       
       - name: Upload APK to release
-        run: |
-          gh release upload "$TAG" area.apk --clobber
+        uses: softprops/action-gh-release@v1
+        with:
+          files: area.apk
