ADD build before releasing apk

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -8,36 +8,10 @@ on:
       - '*'
 
 jobs:
-
-  create-release:
-    permissions: write-all
-    runs-on: ubuntu-latest
-    name: Release
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Generate release tag
-        id: tag
-        run: |
-          echo "::set-output name=release_tag::Release_$(date +"%Y.%m.%d_%H.%M")"
-
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: devops-${{ steps.tag.outputs.release_tag }}
-          release_name: ${{ steps.tag.outputs.release_tag }}
-          draft: false
-          prerelease: false
   
   build:
     runs-on: ubuntu-latest
     needs: create-release
-    env:
-      TAG: ${{ github.ref_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -63,8 +37,27 @@ jobs:
           eas build --platform android --profile production --no-wait --non-interactive --local
           mv build-*.apk area.apk
 
-      - name: Upload APK to release
-        uses: softprops/action-gh-release@v1
+    create-release:
+    permissions: write-all
+    runs-on: ubuntu-latest
+    name: Release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Generate release tag
+        id: tag
+        run: |
+          echo "::set-output name=release_tag::Release_$(date +"%Y.%m.%d_%H.%M")"
+
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ needs.create-release.outputs.release_tag }}
-          files: area.apk
+          tag_name: devops-${{ steps.tag.outputs.release_tag }}
+          release_name: ${{ steps.tag.outputs.release_tag }}
+          draft: false
+          prerelease: false
+          artifacts: area.apk
