--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -11,7 +11,6 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
-    needs: create-release
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -40,6 +39,7 @@ jobs:
   create-release:
     permissions: write-all
     runs-on: ubuntu-latest
+    needs: build
     name: Release
     steps:
       - name: Checkout
