--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Create release
         id: create_release
-        uses: ncipollo/create-release@v1
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
