--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -56,8 +56,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tag.outputs.release_tag }}
-          release_name: ${{ steps.tag.outputs.release_tag }}
-          draft: false
-          prerelease: false
+          tag: ${{ steps.tag.outputs.release_tag }}
+          name: ${{ steps.tag.outputs.release_tag }}
           artifacts: area.apk
