Try to set the path to the apk

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -59,4 +59,4 @@ jobs:
           tag: ${{ steps.tag.outputs.release_tag }}
           name: ${{ steps.tag.outputs.release_tag }}
           artifacts: |
-            area-expo/area.apk
+            ./area-expo/area.apk
