--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -23,7 +23,8 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
-    name: create-tag
+    name: Build
+    needs: create-tag
     steps:
       - name: Checkout
         uses: actions/checkout@v3
