--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   create-tag:
     permissions: write-all
-    runs-on: ubuntu-latests
+    runs-on: ubuntu-latest
     name: Release
     steps:
       - name: Checkout
