--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -56,6 +56,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag: ${{ needs.create-release.outputs.release_tag }}
-          name: ${{ needs.create-release.outputs.release_tag }}
+          tag: ${{ needs.create-tag.outputs.release_tag }}
+          name: ${{ needs.create-tag.outputs.release_tag }}
           artifacts: area.apk
