--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -53,12 +53,19 @@ jobs:
         run: |
           echo "::set-output name=release_tag::Release_$(date +"%Y.%m.%d_%H.%M")"
 
-      - name: Create release
-        id: create_release
-        uses: ncipollo/release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: release
+        uses: softprops/action-gh-release@v1
         with:
-          tag: ${{ steps.tag.outputs.release_tag }}
+          files: ./area-expo/build/area.apk
+          tag_name: ${{ steps.tag.outputs.release_tag }}
           name: ${{ steps.tag.outputs.release_tag }}
-          artifacts: area-expo/build/area.apk
+
+      #- name: Create release
+      #  id: create_release
+      #  uses: ncipollo/release-action@v1
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #  with:
+      #    tag: ${{ steps.tag.outputs.release_tag }}
+      #    name: ${{ steps.tag.outputs.release_tag }}
+      #    artifacts: ./area-expo/build/area.apk
