--- a/.github/workflows/mobile-ci.yml
+++ b/.github/workflows/mobile-ci.yml
@@ -43,7 +43,15 @@ jobs:
           name: area.apk
           path: ./area-expo/build/area.apk
 
+      - name: Generate release tag
+        id: tag
+        run: |
+          echo "::set-output name=release_tag::$(date +"%Y.%m.%d_%H.%M")"
+          echo "::set-output name=release_name::Release_$(date +"%Y.%m.%d_%H.%M")"
+
       - name: release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ steps.tag.outputs.release_tag }}
+          name: ${{ steps.tag.outputs.release_name }}
           files: ./area-expo/build/area.apk
