--- a/area-react/package.json
+++ b/area-react/package.json
@@ -9,9 +9,12 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
+    "react-date-picker": "^10.6.0",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-switch-input": "^1.1.0",
     "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
