--- a/area-node/package.json
+++ b/area-node/package.json
@@ -19,6 +19,7 @@
         "fastify": "^4.25.1",
         "fastify-cron": "^1.3.1",
         "google-auth-library": "^9.4.1",
+        "googleapis": "^130.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
         "octonode": "^0.10.2",
