--- a/area-expo/package.json
+++ b/area-expo/package.json
@@ -30,7 +30,8 @@
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-web-browser": "~12.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
