--- a/area-react/package.json
+++ b/area-react/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "PORT=8081 react-scripts start",
+    "build": "PORT=8081 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
